# 20171201_Doorbell_SDK_v1.2.3.2_64c33b

./: .gitignore  README.md  release_note.txt
ITE_Castor3_SDK/: CMakeLists.txt
ITE_Castor3_SDK/doc/PDF_Files/: index.html
ITE_Castor3_SDK/doc/html/: annotated.html  arm_nor_writer_8h.html  arm_nor_writer_8h_source.html  arm_nor_writer_utility_8h.html  arm_nor_writer_utility_8h_source.html  audio_8c.html  audio_8c_source.html  audio_8h.html  audio_8h_source.html  audio__record_8c.html  audio__record_8c_source.html  boot.html  boot_8h.html  boot_8h_source.html  calllog_8c.html  calllog_8c_source.html  capture_8c.html  capture_8c_source.html  classes.html  custom__target__board_8h.html  custom__target__board_8h_source.html  custom_target_board.html  dataconv.html  dataconv_8h.html  dataconv_8h_source.html  device.html  device_8h.html  device_8h_source.html  device_amplifier.html  device_backlight.html  device_battery.html  device_dac.html  device_gsensor.html  device_headset.html  device_iic.html  device_keypad.html  device_led.html  device_rtc.html  device_spi.html  device_uart.html  (+1220 more)
ITE_Castor3_SDK/openrtos/boot/: CMakeLists.txt
ITE_Castor3_SDK/openrtos/include/: execinfo.h  mqueue.h
ITE_Castor3_SDK/project/Demo_IT9854SDK_V02_A/: CMakeLists.txt  audio.c  ctrlboard.h  function_table - 副本.c  function_table.c  function_table1.c  ite_avienc.c  layer.cmake  layer1.cmake  layer_arc_coverflow.c  layer_audioplayer.c  layer_main_menu1.c  layer_monitor.c  layer_setting_display.c  layer_setting_sound.c  main.c  network.c  queue.c  test_capture.c  user_capture.c  user_capture.h  user_pr2000.c  video.c
ITE_Castor3_SDK/project/Demo_IT9856SDK_V01_Indoor/: CMakeLists.txt  Kconfig_1280x800.win32  addressbook.c  audio.c  doorbell.h  function_table.c  layer_airconditioner.c  layer_audioplayer.c  layer_called.c  layer_calling.c  layer_main_menu.c  layer_setting.c  layer_setting_display.c  layer_setting_lang.c  layer_setting_sound.c  layer_setting_voice.c  layer_videoplayer.c  leafapi.c  main.c  scene.c  screen.c  upgrade.c
ITE_Castor3_SDK/project/codec_it9910/: CMakeLists.txt  Kconfig  codec_crt0.c  codecs.h  codecs.lds  codecs_defs.h  config.cmake  default.lds  or32_crt0.S
ITE_Castor3_SDK/project/doorbell_admin/: CMakeLists.txt  Kconfig.win32  Kconfig_9079  Kconfig_DEMO_IT9856SDK_V01_Admin  addressbook.c  audio.c  calllog.c  capture.c  config.c  device_info.c  doorbell.h  doorbell_admin.ini  event.c  function_table.c  guard.c  layer_account.c  layer_account_keyboard.c  layer_called.c  layer_calling.c  layer_camera.c  layer_camera_lobby.c  layer_camera_view.c  layer_date.c  layer_error.c  layer_guard_log.c  layer_guard_log_view.c  layer_login.c  layer_logo.c  layer_main.c  layer_main_menu.c  layer_phone.c  layer_phone_admin.c  layer_phone_misc.c  layer_phone_resident.c  layer_record.c  layer_record_view.c  layer_redirect.c  layer_redirect_admin.c  layer_redirect_misc.c  layer_redirect_resident.c  (+29 more)
ITE_Castor3_SDK/project/doorbell_admin/itu/: doorbell_admin.itu
ITE_Castor3_SDK/project/doorbell_admin/pack/: pack_firmware.cmd.in  pack_userlist.cmd.in
ITE_Castor3_SDK/project/doorbell_admin/web/: info.js  setting.html
ITE_Castor3_SDK/project/doorbell_indoor_ex/: CMakeLists.txt  Kconfig  Kconfig.win32  audio.c  config.c  config.h  doorbell.h  doorbell_indoor.ini  function_table.c  layer_called.c  layer_camera.c  layer_camera_outdoor.c  layer_camera_view.c  layer_main.c  layer_main_menu.c  layer_message_record.c  layer_message_record_view.c  layer_message_service.c  layer_message_service_view.c  layer_message_video.c  layer_message_video_view.c  leafapi.c  linphonerc  main.c  network.c  scene.c  scene.h
ITE_Castor3_SDK/project/doorbell_indoor_ex/itu/: doorbell_indoor.itu  doorbell_indoor.xml
ITE_Castor3_SDK/project/doorbell_lobby/: CMakeLists.txt  Kconfig_9079  backup.c  config.c  device_info.c  guard.c  layer_opendoor.c  layer_setting.c  layer_setting_audiovolume.c  layer_setting_custom.c  layer_setting_doorpassword.c  layer_setting_info.c  layer_setting_localposition.c  layer_setting_screensaver.c  layer_setting_system.c  layer_setting_time.c  layer_user.c  layer_voicememo.c  main.c  network.c  peripheral.c  reset.c  screen.c  snapshot.c  tv_out.c
ITE_Castor3_SDK/project/doorbell_lobby/fw/HIMAX_HM1375/: jedi.rom
ITE_Castor3_SDK/project/doorbell_lobby/fw/NOVATEK_NT99141/: jedi.rom
ITE_Castor3_SDK/project/doorbell_lobby/fw/OMNIVISION_OV7725/: jedi.rom
ITE_Castor3_SDK/project/doorbell_lobby/fw/TI_TVP5150/: jedi.rom
ITE_Castor3_SDK/project/doorbell_lobby/itu/: doorbell_lobby.itu  doorbell_lobby.xml  doorbell_lobby_chs.itu  doorbell_lobby_chs.xml  doorbell_lobby_cht.itu  doorbell_lobby_cht.xml
ITE_Castor3_SDK/project/doorbell_lobby/pack/: pack_advertisement.cmd.in  pack_firmware.cmd.in
ITE_Castor3_SDK/project/doorbell_lobby/web/: devmode.html
ITE_Castor3_SDK/project/doorbell_lobby_ex/: CMakeLists.txt  Kconfig  config.c  config.h  doorbell_lobby.ini  function_table.c  layer_calling.c  layer_main.c  main.c  network.c  scene.c  scene.h
ITE_Castor3_SDK/project/doorbell_lobby_ex/itu/: doorbell_lobby_chs.itu  doorbell_lobby_chs.xml
ITE_Castor3_SDK/project/doorbell_outdoor/: CMakeLists.txt  Kconfig  Kconfig.evb  Kconfig.win32  addressbook.c  cardlist.c  cardlist.xml  config.c  device_info.c  doorbell.h  doorbell_outdoor.ini  event.c  layer_calling.c  linphone.c  linphonerc  main.c  network.c  peripheral.c  remote.c  scene.c  scene.h  snapshot.c  upgrade.c  webserver.c
ITE_Castor3_SDK/project/doorbell_outdoor/pack/: pack_firmware.cmd.in
ITE_Castor3_SDK/project/doorbell_outdoor/web/: info.js  setting.html
ITE_Castor3_SDK/project/test_mac/: CMakeLists.txt  Kconfig.ip101gr.9856  Kconfig.phy.9852  Kconfig.phy.ctrlboard.9856  Kconfig.phy.lobby.9079  Kconfig.phy.lobby.9856  Kconfig.phy.outdoor.9910  test_mac100_lb.c
ITE_Castor3_SDK/project/test_rtspclient/: CMakeLists.txt  Kconfig  Kconfig.win32  Kconfig_9079  network.c  network.h  test_rtspclient.c  test_rtspclient.docx  test_win32.c
ITE_Castor3_SDK/sdk/: Kconfig  build.cmake  def.cmake
(+505 files in other folders)
